test/aws/terraform/public_access_security_groups_port_rule/port_22_allowed_from_internet_but_instance_on_private_subnet/cloudrail_results.txt

It seems there is some use of Terraform in your code that is not supported by Cloudrail’s version of Terraform and its related providers. 
Please see detailed log below. You may either change your code to correct these issues, or contact us through https://indeni.com/cloudrail-user-support/ and mentioned job_id '582975b5-fe6a-4e36-aa53-62368bb07e70'
Error: UnauthorizedOperation: You are not authorized to perform this operation.
	status code: 403, request id: e74bb7f2-6eee-4aa7-b78c-cfa076c1b288

  on .terraform/modules/vpc_example_complete-vpc/examples/complete-vpc/main.tf line 5, in data "aws_security_group" "default":
   5: data "aws_security_group" "default" {




